test/testdata/string/not_indexable_assignment_error.lox
"foo"[0] = 0; // error: 'string' value is not indexable
